feat: update screenings in database from Google search scrapping